# MATCHING

./: CMakeLists.txt
include/: Correspondance.h  Corrispondance.h  DescrizioneCloud.h  EliminaPiano.h  FPFH.h  SEGMENTA.h  SGURF.h  lettorePLY.h  mylibforpcl.h  mylibforpcl.h~
src/: Correspondance.cpp  DescrizioneCloud.cpp  EliminaPiano.cpp  FPFH.cpp  SEGMENTA.cpp  SGURF.cpp  Segmenta_modello.cpp  chain.cpp  lettorePLY.cpp  main.cpp  mylibforpcl.cpp  mylibforpcl.cpp~  region_growing.cpp~  visualizzapcd.cpp~
